gitops/platform/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    tailscale.com/proxy-group: ingress
    tailscale.com/tags: tag:talos-develop-service
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - argocd
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
